# Spam

./: CMakeLists.txt  README.md
include/Spam/App/PosePlanner/: Data.h  PosePlanner.h
include/Spam/App/R2GPlanner/: Data.h  R2GPlanner.h
include/Spam/Core/: Collision.h  JContact.h
include/Spam/Data/Belief/: Belief.h
include/Spam/Data/R2GTrajectory/: R2GTrajectory.h
include/Spam/Demo/FT/: FTDemo.h
include/Spam/Demo/R2GPlanner/: R2GDemo.h
include/Spam/Demo/TactileExploration/: Player.h
include/Spam/HBPlan/: Belief.h  GraphPlanner.h  Heuristic.h  Hypothesis.h
include/Spam/MCPlan/: Controller.h  CovLaplace.h  CovSE.h  CovThinPlate.h  Covs.h  Data.h  Defs.h  GaussianProcess.h  GaussianProcess_danica.h  Heuristic.h  Model.h  Planner.h  PushPlanner.h  RRT.h  RRTree.h  Robot.h  SampleSet.h  Util.h
include/Spam/PosePlanner/: PosePlanner.h
include/Spam/RagPlanner/: RagPlanner.h
include/Spam/Sensor/: Sensor.h
include/Spam/ShapePlanner/: ShapePlanner.h
include/Spam/Spam/: Belief.h  Data.h  GraphPlanner.h  Heuristic.h  Robot.h  Spam.h
resources/: GraspCameraDepthSimSPAM.xml  GraspCameraPointGreySPAM.xml  GraspDataContactQuerySPAM.xml  GraspDataVideoSPAM.xml  SpamDeviceRobotBhamSim.xml  SpamDeviceRobotJustin.xml  SpamPosePlanner_RobotBham.xml  SpamPosePlanner_RobotBoris.xml  SpamPosePlanner_RobotJustin.xml  SpamRagPlanner_RobotBham.xml  SpamRagPlanner_RobotBoris.xml  SpamRagPlanner_RobotJustin.xml  SpamShapePlanner_RobotBham.xml  SpamShapePlanner_RobotJustin.xml  SpamShapePlanner_RobotUIBK.xml
resources/Spam/: GolemCtrlDLRHitHandIIBorisR.xml  GolemCtrlDLRHitHandIITactile.xml  GolemCtrlRobotBorisTactile.xml  GolemCtrlRobotBorisTactileSim.xml  GolemPlannerDLRHitHandIITactile.xml  GolemPlannerRobotBorisRTactile.xml
resources/Spam/Core/: SpamSensor.xml
resources/Spam/Data/: SpamDataBelief.xml  SpamDataR2GTrajectory.xml
resources/Spam/Demo/: GolemDeviceDLRHitHandIITactile.xml  GolemDeviceRobotBorisTactileSim.xml  GraspCameraDepthSimDemoR2G.xml  GraspCameraKinectDemoR2G.cal  GraspCameraKinectDemoR2G.xml  GraspCameraOpenCVDemoR2G.xml  GraspCameraOpenGLDemoR2G.xml  GraspCameraOpenNIDemoR2G.xml  GraspCameraOpenNIDemoRag.cal  GraspCameraPointGreyDemoR2G.cal  GraspCameraPointGreyDemoR2G.xml  GraspDataImageDemoRag.xml  GraspDataPointsCurvDemoR2G.xml  GraspFTClient.cal  SpamDataBeliefDemoR2G.xml  SpamDemoR2G_RobotBoris.xml  SpamDemoR2G_RobotBorisSim.xml
resources/Spam/Demo/FT/: SpamDemoFT_RobotBoris.xml  SpamDemoFT_RobotBorisSim.xml
resources/Spam/Demo/R2G/: GolemDeviceDLRHitHandIITactile.xml  GolemDeviceRobotBorisTactile.xml  GraspCameraKinectDemoR2G.xml  GraspCameraOpenCVDemoR2G.cal  GraspCameraOpenCVDemoR2G.xml  GraspCameraOpenNI.cal  GraspCameraOpenNIDemoR2G.xml  GraspCameraPointGrey.cal  GraspCameraPointGreyDemoR2G.xml  GraspCameraRobotDepthDemoR2G.xml  GraspDataContactModelDemoR2G.xml  GraspDataContactQueryDemoR2G.xml  GraspDataImageDemoR2G.xml  GraspDataPointsCurvDemoR2G.xml  GraspDataTrajectoryDemoR2G.xml  GraspFTDAQ.cal  GraspPlayer_RobotBorisTactile.xml  SpamDataBeliefDemoR2G.xml  SpamDataR2GTrajectoryDemoR2G.xml  SpamDemoR2G_RobotBoris.xml  SpamDemoR2G_RobotBorisSim.xml
resources/Spam/Demo/TactileExploration/: SpamDemoRRT_RobotBorisSim.xml  SpamPlayer.xml
resources/Spam/R2GPlanner/: SpamR2GPlanner_RobotBoris.xml  SpamR2GPlanner_RobotJustin.xml
resources/Spam/Sensor/: GraspFTDAQ.xml  GraspFTDAQIndex.xml  GraspFTDAQMiddle.xml  GraspFTDAQThumb.xml  GraspFTDAQWrist.xml
src/Spam/App/PosePlanner/: Main.cpp  PosePlanner.cpp
src/Spam/App/R2GPlanner/: Main.cpp  R2GPlanner.cpp
src/Spam/Core/: Collision.cpp  JContact.cpp
src/Spam/Data/Belief/: Belief.cpp
src/Spam/Data/R2GTrajectory/: R2GTrajectory.cpp
src/Spam/Demo/FT/: FTDemo.cpp
src/Spam/Demo/R2GPlanner/: R2GDemo.cpp
src/Spam/Demo/TactileExploration/: Player.cpp
src/Spam/HBPlan/: Belief.cpp  GraphPlanner.cpp  Heuristic.cpp  Hypothesis.cpp
src/Spam/MCPlan/: Controller.cpp  Data.cpp  Heuristic.cpp  Model.cpp  Planner.cpp  PushPlanner.cpp  RRT.cpp  RRTree.cpp  Robot.cpp  SampleSet.cpp
src/Spam/PosePlanner/: PosePlanner.cpp
src/Spam/RagPlanner/: RagPlanner.cpp
src/Spam/Sensor/: Sensor.cpp
src/Spam/ShapePlanner/: ShapePlanner.cpp
src/Spam/Spam/: Belief.cpp  Data.cpp  GraphPlanner.cpp  Heuristic.cpp  Robot.cpp  Spam.cpp
